operators/airlock-microgateway/4.8.6/manifests/airlock-microgateway-operator-config_v1_configmap.yaml
apiVersion: v1
data:
  engine_bootstrap_config_template.yaml: |
    # Base configuration, admin interface on port 19000
    layered_runtime:
      layers:
        - name: static_layer
          static_layer:
            # disable the new JSON formatter as it is not omitting empty fields
            # see https://github.com/envoyproxy/envoy/issues/37941
            envoy.reloadable_features.logging_with_fast_json_formatter: false
            # increase the maximum RE2 program size to support larger regex patterns used in CRs and built-in log masking
            re2.max_program_size.error_level: 8192
    admin:
      address:
        socket_address:
          address: 127.0.0.1
          port_value: 19000
    dynamic_resources:
      ads_config:
        api_type: GRPC
        transport_api_version: V3
        grpc_services:
          - envoy_grpc:
              cluster_name: xds_cluster
        set_node_on_first_message_only: true
        # Prevent Envoy Node from overloading the xDS server due to rejected configuration when using xDS SotW gRPC
        rate_limit_settings:
          max_tokens: $(ADS_RATE_LIMIT_MAX_TOKENS)
          fill_rate: $(ADS_RATE_LIMIT_FILL_RATE)
      cds_config:
        resource_api_version: V3
        initial_fetch_timeout: 10s
        ads: {}
      lds_config:
        resource_api_version: V3
        initial_fetch_timeout: 10s
        ads: {}
    static_resources:
      listeners:
      - name: probe
        stat_prefix: probe
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 19001
        filter_chains:
        - filters:
          - name: http_connection_manager
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: probe
              codec_type: AUTO
              http2_protocol_options:
                initial_connection_window_size: 1048576
                initial_stream_window_size: 65536
                max_concurrent_streams: 100
              route_config:
                name: probe
                virtual_hosts:
                - name: probe
                  domains:
                  - '*'
                  routes:
                  - name: ready
                    match:
                      path: /ready
                      headers:
                      - name: ':method'
                        string_match:
                          exact: 'GET'
                    route:
                      cluster: airlock_microgateway_engine_admin
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      - name: metrics
        stat_prefix: metrics
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 19002
        filter_chains:
          - filters:
              - name: http_connection_manager
                typed_config:
                  '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                  stat_prefix: metrics
                  codec_type: AUTO
                  http2_protocol_options:
                    initial_connection_window_size: 1048576
                    initial_stream_window_size: 65536
                    max_concurrent_streams: 100
                  route_config:
                    name: metrics
                    virtual_hosts:
                      - name: metrics
                        domains:
                          - '*'
                        routes:
                          - name: metrics
                            match:
                              path: /metrics
                              headers:
                                - name: ':method'
                                  string_match:
                                    exact: 'GET'
                            route:
                              prefix_rewrite: '/stats/prometheus'
                              cluster: airlock_microgateway_engine_admin
                  http_filters:
                    - name: envoy.filters.http.router
                      typed_config:
                        '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      clusters:
      - name: xds_cluster
        cluster_type:
          name: envoy.clusters.dns
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.clusters.dns.v3.DnsCluster
            all_addresses_in_single_endpoint: false
            respect_dns_ttl: true
        connect_timeout: 1s
        load_assignment:
          cluster_name: xds_cluster
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: airlock-microgateway-operator-xds.$(OPERATOR_NAMESPACE).svc.cluster.local
                    port_value: 13377
        typed_extension_protocol_options:
          envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
            '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
            explicit_http_config:
              http2_protocol_options:
                connection_keepalive:
                  interval: 360s
                  timeout: 5s
        transport_socket:
          name: envoy.transport_sockets.tls
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
            common_tls_context:
              tls_params:
                tls_minimum_protocol_version: TLSv1_3
                tls_maximum_protocol_version: TLSv1_3
              validation_context_sds_secret_config:
                name: validation_context_sds
                sds_config:
                  resource_api_version: V3
                  path_config_source:
                    path: /app/config/validation_context_sds_secret.yaml
                    watched_directory:
                      path: /app/config/
              tls_certificate_sds_secret_configs:
                - name: tls_certificate_sds
                  sds_config:
                    resource_api_version: V3
                    path_config_source:
                      path: /app/config/tls_certificate_sds_secret.yaml
                      watched_directory:
                        path: /app/config/
      - name: airlock_microgateway_engine_admin
        connect_timeout: 1s
        type: STATIC
        load_assignment:
          cluster_name: airlock_microgateway_engine_admin
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: 127.0.0.1
                    port_value: 19000
        typed_extension_protocol_options:
          envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
            '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
            explicit_http_config:
              http2_protocol_options:
                connection_keepalive:
                  interval: 360s
                  timeout: 5s
    stats_config:
      stats_tags:
        - tag_name: "block_type"
          regex: "\\.(block_type\\.([^.]+))"
        - tag_name: "block_subtype"
          regex: "\\.(block_subtype\\.([^.]+))"
        - tag_name: "envoy_cluster_name"
          regex: "\\.(cluster\\.([^.]+))"
        - tag_name: "upstream"
          regex: "\\.(cluster\\.upstream_(\\d+))"
        - tag_name: "upstream"
          regex: "^cluster\\.(upstream_(\\d+))"
        - tag_name: "upstream"
          regex: "\\.(cluster\\.httproute/([^.]+)/rule/[^.]+)"
        - tag_name: "upstream"
          regex: "^cluster\\.(httproute/([^.]+)/rule/[^.]+)"
        - tag_name: "token_exchange_cluster_name"
          regex: "\\.(token_exchange_cluster_name\\.([^.]+))"
        - tag_name: "policy"
          regex: "\\.(policy\\.([^.]+))"
        - tag_name: "result"
          regex: "\\.(result\\.([^.]+))"
        - tag_name: "request"
          regex: "\\.(request\\.([^.]+))"
        - tag_name: "authentication_method"
          regex: "\\.(authentication_method\\.([^.]+))"
        - tag_name: "authorized"
          regex: "\\.(authorized\\.([^.]+))"
        - tag_name: "back_channel_cluster_name"
          regex: "\\.(back_channel_cluster_name\\.([^.]+))"
      use_all_default_tags: true
    overload_manager:
      resource_monitors:
      - name: "envoy.resource_monitors.global_downstream_max_connections"
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.resource_monitors.downstream_connections.v3.DownstreamConnectionsConfig
          max_active_downstream_connections: 50000
    bootstrap_extensions:
      - name: airlock.bootstrap.engine_stats
        typed_config:
          '@type': type.googleapis.com/airlock.extensions.bootstrap.stats.v1alpha.Stats
          health_probe_approx_req_per_hour: $(HEALTH_PROBE_REQUESTS_PER_HOUR)
    application_log_config:
      log_format:
        text_format: '{"@timestamp":"%Y-%m-%dT%T.%e%z","log":{"logger":"%n","level":"%l","origin":{"file":{"name":"%g","line":%#},"function":"%!"}},"event":{"module":"envoy","dataset":"envoy.application"},"process":{"pid":%P,"thread":{"id":%t}},"ecs":{"version":"8.5"},"message":"%j"}'
  engine_container_template.yaml: |
    name: "$(ENGINE_NAME)"
    image: "$(ENGINE_IMAGE)"
    imagePullPolicy: IfNotPresent
    args:
      - "--config-path"
      - "/app/config/bootstrap_config.yaml"
      - "--base-id"
      - "$(BASE_ID)"
      - "--file-flush-interval-msec"
      - '1000'
      - "--drain-time-s"
      - '60'
      - "--service-node"
      - "$(POD_NAME).$(POD_NAMESPACE)"
      - "--service-cluster"
      - "$(APP_NAME).$(POD_NAMESPACE)"
      - "--log-path"
      - "/dev/stdout"
      - "--log-level"
      - "$(LOG_LEVEL)"
    volumeMounts:
    - name: airlock-microgateway-bootstrap-secret-volume
      mountPath: /app/config/
      readOnly: true
    env:
      - name: POD_NAME
        valueFrom:
          fieldRef:
            apiVersion: v1
            fieldPath: metadata.name
      - name: POD_NAMESPACE
        valueFrom:
          fieldRef:
            apiVersion: v1
            fieldPath: metadata.namespace
      - name: POD_IP
        valueFrom:
          fieldRef:
            apiVersion: v1
            fieldPath: status.podIP
    ports:
      - containerPort: 13378
        protocol: TCP
      - containerPort: 19001
        protocol: TCP
      - containerPort: 19002
        protocol: TCP
    livenessProbe:
      httpGet:
        path: /ready
        port: 19001
        scheme: HTTP
      initialDelaySeconds: 0
      periodSeconds: 10
      failureThreshold: 3
      successThreshold: 1
      timeoutSeconds: 2
    readinessProbe:
      httpGet:
        path: /ready
        port: 19001
        scheme: HTTP
      initialDelaySeconds: 0
      periodSeconds: 5
      failureThreshold: 3
      successThreshold: 1
      timeoutSeconds: 1
    startupProbe:
      httpGet:
        path: /ready
        port: 19001
        scheme: HTTP
      initialDelaySeconds: 0
      periodSeconds: 1
      failureThreshold: 30
      successThreshold: 1
      timeoutSeconds: 1
    securityContext:
      allowPrivilegeEscalation: false
      privileged: false
      runAsNonRoot: true
      capabilities:
        drop: ["ALL"]
      readOnlyRootFilesystem: true
      seccompProfile:
        type: RuntimeDefault
      runAsUser: $(SECURITYCONTEXT_UID)
    resources:
      requests:
        cpu: 100m
        memory: 256Mi
  network_validator_container_template.yaml: |
    name: "$(NETWORK_VALIDATOR_NAME)"
    image: "$(ENGINE_IMAGE)"
    imagePullPolicy: IfNotPresent
    command: ["/app/microgateway-network-validator"]
    securityContext:
      allowPrivilegeEscalation: false
      privileged: false
      runAsNonRoot: true
      capabilities:
        drop: ["ALL"]
      readOnlyRootFilesystem: true
      seccompProfile:
        type: RuntimeDefault
      runAsUser: $(SECURITYCONTEXT_UID)
    resources:
      limits:
        cpu: 25m
        memory: 12Mi
      requests:
        cpu: 5m
        memory: 1Mi
  operator_config.yaml: |
    apiVersion: config.airlock.com/v1alpha1
    kind: OperatorConfig
    health:
      healthProbeBindAddress: :8081
    metrics:
      bindAddress: 0.0.0.0:8080
    webhook:
      port: 9443
    deployment:
      sidecar:
        engineContainerTemplate: "/app/config/sidecar/engine_container_template.yaml"
        networkValidatorContainerTemplate: "/app/config/sidecar/network_validator_container_template.yaml"
        sessionAgentContainerTemplate: "/app/config/sidecar/session_agent_container_template.yaml"
    engine:
      bootstrapConfigTemplate: "/app/config/engine_bootstrap_config_template.yaml"
  session_agent_container_template.yaml: |
    name: "$(SESSION_AGENT_NAME)"
    image: "$(SESSION_AGENT_IMAGE)"
    imagePullPolicy: IfNotPresent
    args:
      - "--port"
      - "19004"
      - "--metrics-port"
      - "19005"
      - "--config-path"
      - "/app/config/config.json"
    volumeMounts:
    - name: airlock-microgateway-session-agent-volume
      mountPath: /app/config/
      readOnly: true
    env:
      - name: POD_NAME
        valueFrom:
          fieldRef:
            apiVersion: v1
            fieldPath: metadata.name
      - name: POD_NAMESPACE
        valueFrom:
          fieldRef:
            apiVersion: v1
            fieldPath: metadata.namespace
    ports:
      - containerPort: 19004
      - containerPort: 19005
    livenessProbe:
      grpc:
        port: 19004
      initialDelaySeconds: 0
      periodSeconds: 10
      failureThreshold: 3
      successThreshold: 1
      timeoutSeconds: 2
    readinessProbe:
      grpc:
        port: 19004
      initialDelaySeconds: 0
      periodSeconds: 5
      failureThreshold: 3
      successThreshold: 1
      timeoutSeconds: 1
    startupProbe:
      grpc:
        port: 19004
      initialDelaySeconds: 0
      periodSeconds: 1
      failureThreshold: 30
      successThreshold: 1
      timeoutSeconds: 1
    securityContext:
      allowPrivilegeEscalation: false
      privileged: false
      runAsNonRoot: true
      capabilities:
        drop: ["ALL"]
      readOnlyRootFilesystem: true
      seccompProfile:
        type: RuntimeDefault
      runAsUser: $(SECURITYCONTEXT_UID)
kind: ConfigMap
metadata:
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: airlock-microgateway
    app.kubernetes.io/name: microgateway-operator
    app.kubernetes.io/part-of: microgateway
    app.kubernetes.io/version: 4.8.6
  name: airlock-microgateway-operator-config
